<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/mainProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/h1"
                android:layout_marginTop="@dimen/h1"
                android:layout_marginEnd="@dimen/h1"
                app:cardBackgroundColor="@color/cardBack"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/h1">

                    <LinearLayout
                        android:id="@+id/profile"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/h2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_name"
                            style="@style/Name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Hi Jati," />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cabin_regular"
                            android:text="@string/see"
                            android:textColor="@color/white"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/picProfile"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@id/profile"
                        android:src="@drawable/imgprofile" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/mainSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainProfile"
                android:layout_marginTop="@dimen/h1"
                android:layout_marginLeft="@dimen/h1"
                android:layout_marginRight="@dimen/h1"
                android:layout_marginBottom="@dimen/h1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/cardBack">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <SearchView
                            android:id="@+id/search_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:queryHint="Looking for a movie?"
                            android:searchIcon="@drawable/ic_baseline_search_24"/>

                    </androidx.appcompat.widget.Toolbar>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/tune"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/mainProfile"
                    android:layout_marginLeft="@dimen/h2"
                    android:text="Search"
                    android:textSize="10sp"
                    app:cardBackgroundColor="@color/cardBack"
                    app:cardCornerRadius="20dp">
                </Button>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/mainRecent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/mainSearch"
                android:layout_marginBottom="@dimen/h1"
                android:layout_marginRight="@dimen/h1"
                android:layout_marginLeft="@dimen/h1">

                <LinearLayout
                    android:id="@+id/recent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/h2">

                        <TextView
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:text="@string/recent"
                            style="@style/subMain"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/more"
                            android:textColor="@color/darkBlue"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_recentMovie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                        tools:listitem="@layout/rv_recent" />
                </LinearLayout>
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/mainRecent"
                android:layout_marginBottom="@dimen/h1"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/rv_banner" />

            <RelativeLayout
                android:id="@+id/mainRecom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rv_banner"
                android:layout_marginBottom="@dimen/h1"
                android:layout_marginRight="@dimen/h1"
                android:layout_marginLeft="@dimen/h1">

                <LinearLayout
                    android:id="@+id/recomendation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/h2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:text="@string/recom"
                            style="@style/subMain"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/more"
                            android:textColor="@color/blue"/>
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_recomMovie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        tools:listitem="@layout/rv_recomendation" />
                </LinearLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainRecom"
                android:text="Log Out"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="75dp"
                android:background="@drawable/logoutbtn"/>

        </RelativeLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomnavbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_alignParentBottom="true">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:scrollIndicators="left"
            app:menu="@menu/bottom_navbar" />
    </androidx.cardview.widget.CardView>


</RelativeLayout>